--- a/package.json
+++ b/package.json
@@ -20,5 +20,10 @@
     "eslint-config-next": "12.0.10",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18"
-  }
+  },
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": "https://github.com/atultrp/TextStar-App-By-NextJs.git",
+  "author": "atultrp <atul31815@gmail.com>",
+  "license": "MIT"
 }
